--- a/package.json
+++ b/package.json
@@ -8,7 +8,10 @@
     "android": "expo start --android",
     "ios": "expo start --ios",
     "web": "expo start --web",
-    "lint": "expo lint"
+    "lint": "expo lint",
+    "dev:docker:build": "docker compose -f docker-compose.dev.yml build",
+    "dev:docker:up": "docker compose -f docker-compose.dev.yml up",
+    "dev:docker:down": "docker compose -f docker-compose.dev.yml down"
   },
   "dependencies": {
     "@expo/vector-icons": "^15.0.2",
@@ -39,6 +42,7 @@
     "react-native-worklets": "0.5.1"
   },
   "devDependencies": {
+    "@expo/ngrok": "^4.1.0",
     "@types/react": "~19.1.0",
     "eslint": "^9.25.0",
     "eslint-config-expo": "~10.0.0",
