--- a/package.json
+++ b/package.json
@@ -14,6 +14,8 @@
     "dev:docker:down": "docker compose -f docker-compose.dev.yml down"
   },
   "dependencies": {
+    "@expo-google-fonts/knewave": "^0.4.1",
+    "@expo-google-fonts/story-script": "^0.4.0",
     "@expo/vector-icons": "^15.0.2",
     "@react-native-async-storage/async-storage": "^2.2.0",
     "@react-navigation/bottom-tabs": "^7.4.0",
@@ -39,6 +41,7 @@
     "react-native-reanimated": "~4.1.1",
     "react-native-safe-area-context": "~5.6.0",
     "react-native-screens": "~4.16.0",
+    "react-native-svg": "^15.14.0",
     "react-native-web": "~0.21.0",
     "react-native-worklets": "0.5.1",
     "zod": "^3.25.76"
