--- a/app.json
+++ b/app.json
@@ -20,7 +20,7 @@
       },
       "edgeToEdgeEnabled": true,
       "predictiveBackGestureEnabled": false,
-      "package": "com.wolfxthax.SBAplicacionmovil"
+      "package": "com.SBAplicacionmovil"
     },
     "web": {
       "output": "static",
