--- a/app.json
+++ b/app.json
@@ -4,7 +4,7 @@
     "slug": "SB-Aplicacion-movil",
     "version": "1.0.0",
     "orientation": "portrait",
-    "icon": "./assets/images/icon.png",
+    "icon": "./assets/images/img_logo.png",
     "scheme": "sbaplicacionmovil",
     "userInterfaceStyle": "automatic",
     "newArchEnabled": true,
