--- a/app.json
+++ b/app.json
@@ -9,7 +9,12 @@
     "userInterfaceStyle": "automatic",
     "newArchEnabled": true,
     "ios": {
-      "supportsTablet": true
+      "supportsTablet": true,
+      "infoPlist": {
+        "NSCameraUsageDescription": "La app necesita acceder a la cámara para tomar fotos y videos.",
+        "NSPhotoLibraryUsageDescription": "La app necesita acceder a la galería para seleccionar fotos y videos.",
+        "NSMicrophoneUsageDescription": "La app necesita acceder al micrófono para grabar audio en videos."
+      }
     },
     "android": {
       "adaptiveIcon": {
@@ -18,6 +23,15 @@
         "backgroundImage": "./assets/images/android-icon-background.png",
         "monochromeImage": "./assets/images/android-icon-monochrome.png"
       },
+        "permissions": [
+          "ACCESS_FINE_LOCATION",
+          "ACCESS_COARSE_LOCATION",
+          "CAMERA",
+          "READ_EXTERNAL_STORAGE",
+          "WRITE_EXTERNAL_STORAGE",
+          "READ_MEDIA_IMAGES",
+          "READ_MEDIA_VIDEO"
+        ],
       "edgeToEdgeEnabled": true,
       "predictiveBackGestureEnabled": false,
       "package": "com.wolfxthax.SBAplicacionmovil"
@@ -54,6 +68,7 @@
     "runtimeVersion": {
       "policy": "appVersion"
     },
+    
     "updates": {
       "url": "https://u.expo.dev/fc7331a3-dda8-4ded-b288-398c4e9f71e8"
     }
