--- a/app.json
+++ b/app.json
@@ -4,6 +4,7 @@
     "slug": "SB-Aplicacion-movil",
     "version": "1.0.0",
     "orientation": "portrait",
+    "jsEngine": "hermes",
     "icon": "./assets/images/img_logo.png",
     "scheme": "sbaplicacionmovil",
     "userInterfaceStyle": "automatic",
