--- a/app.json
+++ b/app.json
@@ -10,11 +10,13 @@
     "newArchEnabled": true,
     "ios": {
       "supportsTablet": true,
+      "bundleIdentifier": "com.wolfxthax.sbaplicacionmovil",
       "infoPlist": {
         "NSCameraUsageDescription": "La app necesita acceder a la cámara para tomar fotos y videos.",
         "NSPhotoLibraryUsageDescription": "La app necesita acceder a la galería para seleccionar fotos y videos.",
         "NSMicrophoneUsageDescription": "La app necesita acceder al micrófono para grabar audio en videos."
-      }
+      },
+      "associatedDomains": ["applinks:sbaplicacionmovil"]
     },
     "android": {
       "adaptiveIcon": {
@@ -37,7 +39,20 @@
       ],
       "edgeToEdgeEnabled": true,
       "predictiveBackGestureEnabled": false,
-      "package": "com.wolfxthax.sbaplicacionmovil"
+      "package": "com.wolfxthax.sbaplicacionmovil",
+      "intentFilters": [
+        {
+          "action": "VIEW",
+          "autoVerify": true,
+          "data": [
+            {
+              "scheme": "sbaplicacionmovil",
+              "host": "*"
+            }
+          ],
+          "category": ["BROWSABLE", "DEFAULT"]
+        }
+      ]
       // ...config eliminado, ahora se gestiona en app.config.js
     },
     
