--- a/package.json
+++ b/package.json
@@ -41,6 +41,7 @@
     "expo-web-browser": "~15.0.8",
     "glob": "^11.0.3",
     "jimp": "^1.6.0",
+    "prebuild": "^13.0.1",
     "react": "19.1.0",
     "react-dom": "19.1.0",
     "react-native": "0.81.4",
