--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "@supabase/supabase-js": "^2.58.0",
     "expo": "~54.0.12",
     "expo-constants": "~18.0.10",
+    "expo-dev-client": "~6.0.16",
     "expo-device": "~8.0.9",
     "expo-font": "~14.0.8",
     "expo-haptics": "~15.0.7",
