--- a/app.json
+++ b/app.json
@@ -59,7 +59,8 @@
             "DEFAULT"
           ]
         }
-  ]
+  ],
+      "googleServicesFile": "./google-services.json"
     },
     "web": {
       "output": "static",
