--- a/eas.json
+++ b/eas.json
@@ -4,6 +4,13 @@
     "version": ">= 1.0.0"
   },
   "build": {
+     "development": {
+      "developmentClient": true,
+      "channel": "development",
+      "android": {
+        "buildType": "apk"
+      }
+    },
     "internal-apk": {
       "distribution": "internal",
       "channel": "despliegue",
