--- a/app.json
+++ b/app.json
@@ -66,7 +66,7 @@
       "output": "static",
       "favicon": "./assets/images/favicon.png"
     },
-    "plugins": [
+      "plugins": [
       [
         "expo-updates",
         {
@@ -75,6 +75,8 @@
         }
       ],
       "expo-router",
+      "expo-audio",
+      "expo-video",
       [
         "expo-splash-screen",
         {
