--- a/package.json
+++ b/package.json
@@ -22,13 +22,18 @@
     "@react-navigation/elements": "^2.6.3",
     "@react-navigation/native": "^7.1.8",
     "@supabase/supabase-js": "^2.58.0",
+    "base64-js": "^1.5.1",
     "expo": "~54.0.12",
+    "expo-audio": "~1.0.14",
+    "expo-av": "~16.0.7",
     "expo-constants": "~18.0.10",
-    "expo-dev-client": "~6.0.16",
     "expo-device": "~8.0.9",
+    "expo-file-system": "~19.0.17",
     "expo-font": "~14.0.8",
     "expo-haptics": "~15.0.7",
     "expo-image": "~3.0.8",
+    "expo-image-manipulator": "~14.0.7",
+    "expo-image-picker": "~17.0.8",
     "expo-linking": "~8.0.8",
     "expo-location": "~19.0.7",
     "expo-network": "~8.0.7",
@@ -39,6 +44,7 @@
     "expo-symbols": "~1.0.7",
     "expo-system-ui": "~6.0.7",
     "expo-updates": "~29.0.12",
+    "expo-video": "~3.0.14",
     "expo-web-browser": "~15.0.8",
     "glob": "^11.0.3",
     "jimp": "^1.6.0",
