--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
   },
   "dependencies": {
     "@expo-google-fonts/knewave": "^0.4.1",
+    "@expo-google-fonts/nunito": "^0.4.2",
     "@expo-google-fonts/story-script": "^0.4.0",
     "@expo/vector-icons": "^15.0.2",
     "@react-native-async-storage/async-storage": "^2.2.0",
