--- a/package.json
+++ b/package.json
@@ -47,6 +47,7 @@
     "expo-system-ui": "~6.0.7",
     "expo-updates": "~29.0.12",
     "expo-video": "~3.0.14",
+    "expo-video-thumbnails": "~10.0.7",
     "expo-web-browser": "~15.0.8",
     "glob": "^11.0.3",
     "jimp": "^1.6.0",
